--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="menu">
         <h2>HTML Task</h2>
         <ul>
-            <a href="#"><li>Task 1</li></a>
+            <a href="HTML/task1.html"><li>Task 1</li></a>
             <a href="#"><li>Task 2</li></a>
             <a href="#"><li>Task 3</li></a>
         </ul>
