--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="menu">
         <h2>CSS Task</h2>
         <ul>
-            <a href="#"><li>Task 1</li></a>
+            <a href="CSS/task1.html"><li>Task 1</li></a>
             <a href="#"><li>Task 2</li></a>
             <a href="#"><li>Task 3</li></a>
         </ul>
@@ -71,7 +71,7 @@
     <div class="menu">
         <h2>Bootstrap Task</h2>
         <ul>
-            <a href="#"><li>Task 1</li></a>
+            <a href="Bootstrap/task1.html"><li>Task 1</li></a>
             <a href="#"><li>Task 2</li></a>
             <a href="#"><li>Task 3</li></a>
         </ul>
