--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <h2>HTML Task</h2>
         <ul>
             <a href="HTML/task1.html"><li>Task 1</li></a>
-            <a href=""HTML/task2.html""><li>Task 2</li></a>
-            <a href=""HTML/task3.html""><li>Task 3</li></a>
-             <a href=""HTML/task4.html""><li>Task 4</li></a>
-             <a href=""HTML/task5.html""><li>Task 5</li></a>
+            <a href="HTML/task2.html"><li>Task 2</li></a>
+            <a href="HTML/task3.html"><li>Task 3</li></a>
+             <a href="HTML/task4.html"><li>Task 4</li></a>
+             <a href="HTML/task5.html"><li>Task 5</li></a>
         </ul>
     </div>
     <div class="menu">
