--- a/index.html
+++ b/index.html
@@ -66,8 +66,13 @@
         <h2>CSS Task</h2>
         <ul>
             <a href="CSS/task1.html"><li>Task 1</li></a>
-            <a href="#"><li>Task 2</li></a>
-            <a href="#"><li>Task 3</li></a>
+            <a href="CSS/task2.html"><li>Task 2</li></a>
+            <a href="CSS/task3.html"><li>Task 3</li></a>
+            <a href="CSS/task4.html"><li>Task 4</li></a>
+            <a href="CSS/task5.html"><li>Task 5</li></a>
+            <a href="CSS/task6.html"><li>Task 6</li></a>
+            <a href="CSS/task7.html"><li>Task 7</li></a>
+           
         </ul>
     </div>
     <div class="menu">
