--- a/CSS/task6.html
+++ b/CSS/task6.html
@@ -25,17 +25,23 @@
             overflow: hidden;
         }
 
+        
         .avatar-icon {
-            width: 80px;
+            width: 125px;
             height: 100px;
-            background-color: #f0f0f0;
             position: absolute;
-            bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+            diplay:flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+        .image{
+            width:100%;
+            height:100%;
+
         }
 
-        .avatar-head {
+/*         .avatar-head {
             width: 40px;
             height: 40px;
             background-color: #f0f0f0;
@@ -44,7 +50,7 @@
             top: 15px;
             left: 50%;
             transform: translateX(-50%);
-        }
+        } */
 
         .login-form {
             text-align: left;
@@ -111,7 +117,11 @@
     <div class="login-container">
         <div class="avatar">
             <div class="avatar-head"></div>
-            <div class="avatar-icon"></div>
+            <div class="avatar-icon">
+                 <div class="avatar-icon">
+                <img class="image" src=" CSS/assests/Business_Woman-4096-1824870684.png">
+            </div>
+            </div>
         </div>
 
         <form class="login-form">
