--- a/Boostrap/task2.html
+++ b/Boostrap/task2.html
@@ -67,7 +67,7 @@
     </div>
 </nav>
 <div class="hero-section">
-    <img src="img.jpg" alt="Construction Site">
+    <img src="assets/img.jpg" alt="Construction Site">
     <div class="hero-text">
         <h3>We Are Professional</h3>
         <h1><strong>For Your Dream Project</strong></h1>
