--- a/Boostrap/task4.html
+++ b/Boostrap/task4.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="card">
-                <img src="water.jpg" class="card-img-top" alt="Material Card">
+                <img src="assets/water.jpg" class="card-img-top" alt="Material Card">
                 <div class="card-body">
                     <h5 class="card-title">MATERIAL CARDS</h5>
                     <p class="card-text">Cards for display in portfolio style material design by Google.</p>
@@ -43,7 +43,7 @@
         </div>
         <div class="col-md-3">
             <div class="card">
-                <img src="water.jpg" class="card-img-top" alt="Material Card">
+                <img src="assets/water.jpg" class="card-img-top" alt="Material Card">
                 <div class="card-body">
                     <h5 class="card-title">MATERIAL CARDS</h5>
                     <p class="card-text">Cards for display in portfolio style material design by Google.</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-md-3">
             <div class="card">
-                <img src="water.jpg" class="card-img-top" alt="Material Card">
+                <img src="assets/water.jpg" class="card-img-top" alt="Material Card">
                 <div class="card-body">
                     <h5 class="card-title">MATERIAL CARDS</h5>
                     <p class="card-text">Cards for display in portfolio style material design by Google.</p>
@@ -67,7 +67,7 @@
         </div>
         <div class="col-md-3">
             <div class="card">
-                <img src="water.jpg" class="card-img-top" alt="Material Card">
+                <img src="assets/water.jpg" class="card-img-top" alt="Material Card">
                 <div class="card-body">
                     <h5 class="card-title">MATERIAL CARDS</h5>
                     <p class="card-text">Cards for display in portfolio style material design by Google.</p>
